Fixes the nav size and alignment

--- a/src/components/Home/Menu/Menu.css
+++ b/src/components/Home/Menu/Menu.css
@@ -64,12 +64,14 @@ body {
 }
 
 .nav {
-    width: 100vw;
     height: 100vh; /* Ensure full viewport height */
     position: fixed;
     z-index: 1;
     top: 0;
     left: 0;
+    width: 0; /* Initially hidden */
+    overflow: hidden; /* Prevent scrolling */
+    transition: width 0.8s cubic-bezier(.77, 0, .175, 1); /* Smooth transition */
 }
 
 .nav:before,
@@ -94,7 +96,7 @@ body {
 }
 
 .nav__content {
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%); /* Center vertically and horizontally */
@@ -138,41 +140,8 @@ body {
     margin-right: 25px;
 }
 
-body.nav-active .nav:after {
-    left: 0;
-}
-
-.nav__list-item:before {
-    content: "";
-    position: absolute;
-    background: #000000;
-    width: 20px;
-    height: 1px;
-    top: 100%;
-    transform: translate(0%, 0%);
-    transition: all .3s ease;
-    z-index: -1;
-}
-
-.nav__list-item:hover:before {
-    width: 100%;
-}
-
-/* active state */
-body.nav-active .menu-icon__line {
-    background-color: #000;
-    transform: translateX(0px) rotate(-45deg);
-}
-
-body.nav-active .menu-icon__line-left {
-    transform: translateX(1px) rotate(45deg);
-}
-
-body.nav-active .menu-icon__line-right {
-    transform: translateX(-2px) rotate(45deg);
-}
-
 body.nav-active .nav {
+    width: 100vw; /* Only apply 100vw when nav-active class is present */
     visibility: visible;
 }
 
